--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body{
 .profile-img {
     width: 150px;
     height: 150px;
-    border: 3px solid #fff;
+    border: 3px solid #000;
     border-radius: 75px;
     object-fit: cover;
 }
