--- a/src/App.css
+++ b/src/App.css
@@ -61,9 +61,9 @@ body{
 }
 
 .track.text{
-    background-color: #fff;
+    background-color: #000;
     color: #000;
-    opacity: 0.75;
+    /* opacity: 0.75; */
     width:214px;
     margin-left: 3px;
     text-align: center;
